--- a/assets/02-css/02-cssBeginner/01-css_units.html
+++ b/assets/02-css/02-cssBeginner/01-css_units.html
@@ -488,7 +488,7 @@
 		<!-- color의 단위 종합 예제 -->
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.1.unit/2.1.color.html">
 			<h3 class="ve_tit">color의 단위 종합 예제</h3>
-			<div class="uk_editor min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
