--- a/assets/02-css/01-cssStart/06-css_apply.html
+++ b/assets/02-css/01-cssStart/06-css_apply.html
@@ -19,10 +19,12 @@
 				한 문서에 한 요소만 적용이 됩니다.<br>
 				따라서 이 방식은 될 수 있으면 꼭 필요한 경우에만 사용해야 합니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="css/start/apply_inline.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="Inline style CSS">
+				<textarea readonly="readonly">
+					<body>
+						<h1 style="font-size:20px;">uxkm.github.io</h1>
+					</body>
+				</textarea>
 			</div>
 		</article>
 
@@ -35,10 +37,15 @@
 				HTML5.2 권고안(2017년 12월 14일 발표)에 따르면 <code>&lt;body&gt;</code> 안에 <code>&lt;style&gt;</code> 사용 가능하다고 명시됩니다.<br>
 				이러한 내부 스타일 시트는 해당 HTML 문서에만 스타일을 적용할 수 있습니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="css/start/apply_internal.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="Internal style CSS">
+				<textarea readonly="readonly">
+					<head>
+						<style type="text/css">
+							h1 {font-size:20px}
+							p {font-size:16px}
+						</style>
+					</head>
+				</textarea>
 			</div>
 		</article>
 
@@ -53,10 +60,12 @@
 				웹 사이트의 스타일 적용은 외부 스타일 시트를 사용하는 것이 유지 보수도 편하며, 가장 안정적입니다.<br>
 				현재 권장하는 방식이며 제일 많이 사용하는 방식입니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="css/start/apply_external.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="External style CSS">
+				<textarea readonly="readonly">
+					<head>
+						<link rel="stylesheet" type="text/css" href="css/ukReset.css">
+					</head>
+				</textarea>
 			</div>
 		</article>
 
@@ -69,15 +78,30 @@
 				이 방식은 CSS 적용을 하기 전 CSS 문서의 최상위에 위치해서 불러들여야 합니다.<br>
 				이 방식은 권장하는 방식은 아니지만, 프로젝트 환경에 따라 사용할 수 있습니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="css/start/apply_import1.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="@import style CSS">
+				<textarea readonly="readonly">
+					<head>
+						<style type="text/css">
+							@import url('ukReset.css');
+							h1 {font-size:20px}
+							p {font-size:16px}
+						</style>
+					</head>
+				</textarea>
 			</div>
-			<div class="view_editor ex_code mt_s" data-target="css/start/apply_import2.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="@import style CSS">
+				<textarea readonly="readonly">
+					/*
+					<head>
+						<link rel="stylesheet" type="text/css" href="css/ukReset.css">
+					</head>
+					위처럼 외부 스타일 방식으로 불러들이는 ukReset.css 안에 다음과 같이 사용
+					*/
+
+					@import url('ukFont.css');
+					h1 {font-size:20px}
+					p {font-size:16px}
+				</textarea>
 			</div>
 		</article>
 	</section>
