--- a/assets/02-css/02-cssBeginner/02-css_selectors_level1.html
+++ b/assets/02-css/02-cssBeginner/02-css_selectors_level1.html
@@ -199,8 +199,14 @@
 				CSS Level 2 선택자<br>
 				CSS를 적용할 대상으로 HTML 문서 내부의 모든 요소를 선택합니다. 별표(*)로 나타냅니다.<br>
 				별표는 간단한 선택기로 선택 사항입니다. 예를 들어, *.warning와 .warning 은 동일합니다.<br>
-				<code>*{/* style 작성 */}</code>
 			</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="Universal Selectors">
+				<textarea readonly="readonly">
+					* {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
 			<p class="font-16 t_blue mt_m"><strong>* {}</strong></p>
 			<div class="ol_lst indent mt_s">
 				<ol>
@@ -224,7 +230,7 @@
 					</li>
 				</ol>
 			</div>
-			<aside class="browser_support mt_m" data-tit="Universal Selectors">
+			<aside class="browser_support indent mt_m" data-tit="Universal Selectors">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -242,15 +248,20 @@
 			<p class="mt_s">
 				CSS Level 1 선택자<br>
 				타입 선택자(Type Selector)는 h1, p, div, span 등 HTML 요소(Element)를 선택하는 선택자입니다.<br>
-				<code>Element{/* style 작성 */}</code>
 			</p>
-			<p class="font-16 t_blue mt_m"><strong>Element</strong></p>
-			<div class="view_editor indent edit_code mt_s" data-target="css/step01/2.2.selector/2.2.2.2.type-selector.html">
+			<div class="uk_gist_code_box mt_ms" data-tit="Type Selectors">
+				<textarea readonly="readonly">
+					Element {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.2.2.type-selector.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="Type Selectors">
+			<aside class="browser_support mt_m" data-tit="Type Selectors">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -268,15 +279,20 @@
 			<p class="mt_s">
 				CSS Level 1 선택자<br>
 				아이디 선택자(ID Selector)는 특정 값을 id 속성(attribute)의 값으로 갖는 요소(element)를 선택합니다. 속성값 앞에 #을 붙여 아이디임을 나타냅니다.<br>
-				<code>#idname{/* style 작성 */</code>
 			</p>
-			<p class="font-16 t_blue mt_m"><strong>#idname</strong></p>
-			<div class="view_editor indent edit_code mt_s" data-target="css/step01/2.2.selector/2.2.2.3.id-selector.html">
+			<div class="uk_gist_code_box mt_ms" data-tit="ID Selectors">
+				<textarea readonly="readonly">
+					#idname {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.2.3.id-selector.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="ID Selectors">
+			<aside class="browser_support mt_m" data-tit="ID Selectors">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -294,15 +310,20 @@
 			<p class="mt_s">
 				CSS Level 1 선택자<br>
 				클래스 선택자(Class Selector)는 특정 값을 class 속성(attribute)의 값으로 갖는 요소(element)를 선택합니다. 속성값 앞에 .을 붙여 클래스임을 나타냅니다.<br>
-				ex) /* class 속성값으로 abc를 갖는 요소를 선택 */ .abc
 			</p>
-			<p class="font-16 t_blue mt_m"><strong>.classname</strong></p>
-			<div class="view_editor indent edit_code mt_s" data-target="css/step01/2.2.selector/2.2.2.4.class-selector.html">
+			<div class="uk_gist_code_box mt_ms" data-tit="Class Selectors">
+				<textarea readonly="readonly">
+					.classname {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.2.4.class-selector.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="Class Selectors">
+			<aside class="browser_support mt_m" data-tit="Class Selectors">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -324,26 +345,29 @@
 				그룹 선택자(Grouping selectors)는 모든 선택자를 콤마(,)로 조합하여 그룹으로 지어 작성할 수 있습니다.
 			</p>
 		</blockquote>
-
-		<!-- Element, Element, Element -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn t_blue">Element, Element, Element</h3>
-			<div class="view_editor edit_code mt_s" data-target="css/step01/2.2.selector/2.2.3.group-selector.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="Grouping Selectors">
+				<textarea readonly="readonly">
+					/* Element, Element, Element */
+					div, p, h1 {
+						/* style 작성 */
+					}
+				</textarea>
+		</div>
+		<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.3.group-selector.html">
+			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
 			</div>
-			<aside class="browser_support mt_m" data-tit="Grouping selectors">
-				<ul>
-					<li class="ie">지원</li>
-					<li class="edge">지원</li>
-					<li class="chrome">지원</li>
-					<li class="firefox">지원</li>
-					<li class="opera">지원</li>
-					<li class="safari">지원</li>
-				</ul>
-			</aside>
-		</article>
+		</div>
+		<aside class="browser_support mt_m" data-tit="Grouping selectors">
+			<ul>
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">지원</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</aside>
 	</section>
 
 	<!-- 2.2.4. 조합 선택자(Combinators) -->
@@ -357,15 +381,20 @@
 				CSS Level 1 선택자<br>
 				하위 조합 선택자는 특정 요소의 하위에 있는 요소를 선택합니다.<br>
 				하위 조합 콤비 네이터를 사용하는 선택기를 하위 선택자 라고 합니다.<br>
-				<code>E F{/* declarations */}</code>
 			</p>
-			<p class="font-16 t_blue mt_m"><strong>E F</strong></p>
-			<div class="view_editor indent edit_code mt_s" data-target="css/step01/2.2.selector/2.2.4.1.descendant-combinator.html">
+			<div class="uk_gist_code_box mt_ms" data-tit="Descendant combinator">
+				<textarea readonly="readonly">
+					ul li {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.4.1.descendant-combinator.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="Descendant combinator">
+			<aside class="browser_support mt_m" data-tit="Descendant combinator">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -386,15 +415,20 @@
 				첫 번째 요소와 일치하는 요소의 직접적인 하위 요소인 두 번째 선택자와 일치하는 요소만 일치합니다.<br>
 				두 번째 선택자와 일치하는 요소는 첫 번째 선택자와 일치하는 요소의 직계 자식이어야 합니다.<br>
 				특정 요소의 자식 요소를 선택. 한단계 아래에 있는 요소만 선택한다.<br>
-				<code>E > F{/* declarations */}</code>
 			</p>
-			<p class="font-16 t_blue mt_m"><strong>E > F</strong></p>
-			<div class="view_editor indent edit_code mt_s" data-target="css/step01/2.2.selector/2.2.4.2.child-combinator.html">
+			<div class="uk_gist_code_box mt_ms" data-tit="Child combinator">
+				<textarea readonly="readonly">
+					ul > li {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.4.2.child-combinator.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="Child combinator">
+			<aside class="browser_support mt_m" data-tit="Child combinator">
 				<ul>
 					<li class="ie">7+</li>
 					<li class="edge">12.0</li>
@@ -411,17 +445,21 @@
 			<h3 class="ml_mn t_blue">2.2.4.3. 인접한 형제 선택자(Adjacent sibling combinator)</h3>
 			<p class="mt_s">
 				CSS Level 2 선택자<br>
-				형제(동위) 셀렉터는 형제 관계(동위 관계)에서 뒤에 위치하는 요소를 선택할 때 사용한다.<br>
-				어떤 요소의 형제 요소 중 첫번째 요소를 선택.<br>
-				<code>E + F{/* declarations */}</code>
+				형제(동위) 셀렉터는 형제 관계(동위 관계)에서 뒤에 위치하는 요소를 선택할 때 사용합니다.<br>
+				인접한 형제 선택자(Adjacent Sibling Selector)는 요소의 형제 요소 중 첫번째 형제 요소를 선택하며,<br>
+				지정된 요소의 인접한 형제와 만 일치합니다. 즉, 요소는 동일한 상위 요소를 가져야하며 지정된 요소 바로 다음에 와야합니다.
 			</p>
-			<p class="font-16 t_blue mt_m"><strong>E + F(셀렉터A + 셀렉터B)</strong></p>
-			<p class="indent mt_s">
-				인접한 형제 선택자(Adjacent Sibling Selector)는 어떤 요소의 형제 요소 중 첫번째 요소를 선택합니다.<br>
-				지정된 요소의 인접한 형제와 만 일치합니다. 즉, 요소는 동일한 상위 요소를 가져야하며 지정된 요소 바로 다음에 와야합니다.<br>
+			<p class="mt_s">
 				셀렉터A의 형제 요소 중 셀렉터A 바로 뒤에 위치하는 셀렉터B 요소를 선택하며, A와 B 사이에 다른 요소가 존재하면 선택되지 않습니다.
 			</p>
-			<div class="adjacent_sibling indent mt_s">
+			<div class="uk_gist_code_box mt_ms" data-tit="Adjacent sibling combinator">
+				<textarea readonly="readonly">
+					p + ul {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+			<div class="adjacent_sibling mt_m">
 				<div class="inner_wrap">
 					<ul>
 						<li>body</li>
@@ -437,12 +475,12 @@
 				</div>
 				<p class="txt mt_ms">[인접한 형제 선택자]</p>
 			</div>
-			<div class="view_editor indent edit_code mt_s" data-target="css/step01/2.2.selector/2.2.4.3.adjacent-sibling-combinator.html">
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.4.3.adjacent-sibling-combinator.html">
 				<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="Adjacent sibling combinator">
+			<aside class="browser_support mt_m" data-tit="Adjacent sibling combinator">
 				<ul>
 					<li class="ie">7+</li>
 					<li class="edge">12.0</li>
@@ -463,6 +501,22 @@
 			CSS 속성 선택기는 주어진 속성의 존재 또는 값에 따라 요소를 일치시킵니다.<br>
 			<code>[attribute]</code> / <code>[attribute='value']</code> / <code>[attribute~='bar']</code> / <code>[attribute|='en']</code>
 		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="Attribute Selector">
+			<textarea readonly="readonly">
+				div[attribute] {
+					/* style 작성 */
+				}
+				div[attribute='value'] {
+					/* style 작성 */
+				}
+				div[attribute~='bar'] {
+					/* style 작성 */
+				}
+				div[attribute|='en'] {
+					/* style 작성 */
+				}
+			</textarea>
+		</div>
 
 		<!-- [attribute] -->
 		<article class="indent mt_l">
@@ -535,6 +589,25 @@
 				<code>:hover</code>는 반드시 <code>:link</code>와 <code>:visited</code>가 먼저 정의된 후에 정의되어야 정상적으로 동작합니다.<br>
 				<code>:active</code>는 반드시 <code>:hover</code>가 먼저 정의된 후에 정의되어야 정상적으로 동작합니다.
 			</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="Pseudo-classes">
+				<textarea readonly="readonly">
+					a:link {
+						/* style 작성 */
+					}
+					a:visited {
+						/* style 작성 */
+					}
+					a:active {
+						/* style 작성 */
+					}
+					a:hover {
+						/* style 작성 */
+					}
+					a:focus {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
 			<div class="mt_m">
 				<strong class="font-16 t_blue mt_m">:link</strong>
 				<p class="indent mt_s">
@@ -594,22 +667,23 @@
 			<blockquote class="uk_note mt_m" role="note">
 				<h4 class="sound_only">요약 설명</h4>
 				<p>
+					<i class="t_blue">CSS Level 2 선택자</i><br />
 					구조 의사 클래스를 사용하면 HTML 요소의 계층 구조에서 특정 위치에 있는 요소를 선택할 수 있습니다.
 				</p>
 			</blockquote>
-			<p class="mt_s">CSS Level 2 선택자</p>
-
-			<div class="mt_m">
-				<strong class="font-16 t_blue mt_m">:first-child</strong>
-				<p class="indent mt_s">
-					셀렉터에 해당하는 요소 유형(타입)에 상관없이 모든 요소 중 첫번째 자식인 요소를 선택합니다.<br>
-					부모의 첫 번째 자식 인 요소를 나타냅니다.<br>
-					이 가상 클래스는 CSS2.1에서 먼저 정의되었고 IE7+ 모든 브라우저들이 지원하고 있습니다.
-					<code>:first-child{/* style 작성 */}</code>
-				</p>
+			<p class="mt_m">
+				셀렉터에 해당하는 요소 유형(타입)에 상관없이 모든 요소 중 첫번째 자식인 요소를 선택합니다.<br>
+				부모의 첫 번째 자식 인 요소를 나타냅니다.<br>
+				이 가상 클래스는 CSS2.1에서 먼저 정의되었고 IE7+ 모든 브라우저들이 지원하고 있습니다.
+			</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="Structural pseudo-class">
+				<textarea readonly="readonly">
+					p:first-child {
+						/* style 작성 */
+					}
+				</textarea>
 			</div>
-
-			<div class="view_editor edit_code mt_l" data-target="css/step01/2.2.selector/2.2.6.2.structural-pseudo-class.html">
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.6.2.structural-pseudo-class.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
@@ -633,17 +707,18 @@
 				CSS Level 2 선택자<br>
 				language 의사 클래스는 문서의 언어를 기반으로 요소를 선택합니다.
 			</p>
-
-			<div class="mt_m">
-				<strong class="font-16 t_blue mt_m">:lang(언어코드)</strong>
-				<p class="indent mt_s">
-					특정 요소를 언어 설정에 따라 다르게 표현할 때에 사용합니다.<br>
-					:lang(언어코드)<br>
-					최상위 html에 lang="언어코드"가 있으면 최상위에 있는것이 먼저 적용됩니다.
-				</p>
+			<p class="mt_s">
+				특정 요소를 언어 설정에 따라 다르게 표현할 때에 사용합니다.<br>
+				최상위 html에 lang="언어코드"가 있으면 최상위에 있는것이 먼저 적용됩니다.
+			</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="The language pseudo-class">
+				<textarea readonly="readonly">
+					p:lang(언어코드) {
+						/* style 작성 */
+					}
+				</textarea>
 			</div>
-
-			<div class="view_editor edit_code mt_l" data-target="css/step01/2.2.selector/2.2.6.3.language-pseudo-class.html">
+			<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.6.3.language-pseudo-class.html">
 				<div class="uk_editor min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
