--- a/assets/02-css/02-cssBeginner/04-css_font.html
+++ b/assets/02-css/02-cssBeginner/04-css_font.html
@@ -29,10 +29,16 @@
 			generic family : 비슷한 모양을 가지는 글꼴 집합 ("Serif", "Monospace" 등)<br>
 			font family : 특정 글꼴 집합 ("Times", "Courier" 등)
 		</p>
-		<p class="mt_s">
-			<code>p { font-family: inherit | family-name }</code><br>
-			<code>p { font-family: "Malgun Gothic", "Times New Roman", Times, serif; }</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="font-family">
+			<textarea readonly="readonly">
+				p {
+					font-family: inherit | family-name;
+				}
+				p {
+					font-family: "Malgun Gothic", "Times New Roman", Times, serif;
+				}
+			</textarea>
+		</div>
 	</section>
 
 	<!-- font-style 속성 -->
@@ -41,10 +47,12 @@
 		<p class="mt_s">
 			font-style 속성은 주로 이탤릭체를 사용하기 위해 사용하며, 다음과 같이 4가지의 속성값을 가집니다.
 		</p>
-		<p class="mt_s">
-			<code>p { font-style: normal | italic | oblique | inherit; }</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="font-style">
+			<textarea readonly="readonly">
+				p { font-style: normal | italic | oblique | inherit; }
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 텍스트에 어떠한 스타일도 적용하지 않습니다.</li>
 				<li><strong class="t_black">italic</strong> : 텍스트를 이탤릭체로 나타냅니다.</li>
@@ -69,10 +77,14 @@
 			또한, 사용자가 웹 브라우저를 통해 텍스트의 크기를 직접 변경할 수도 있습니다.<br>
 			font-size 속성값에 자주 사용되는 대표적인 크기 단위는 백분율 단위(%), 배수 단위(em), 픽셀 단위(px)를 설정합니다.
 		</p>
-		<p class="mt_s">
-			<code>p { font-size: 절대 크기(xx-small | x-small | small | medium | large | x-large | xx-large) | 상대 크기(em) | length(길이) | % | inherit }</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="font-size">
+			<textarea readonly="readonly">
+				p {
+					font-size: 절대 크기(xx-small | x-small | small | medium | large | x-large | xx-large) | 상대 크기(em) | length(길이) | % | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">length(길이)</strong> : 부동 소수점 숫자 뒤에 절대 단위 지정자( cm , mm , in , pt , pc ) 또는 상대 단위 지정자( em , ex , px )가 오는 값을 지정한다.</li>
 				<li><strong class="t_black">%(퍼센트)</strong> : 퍼센트 부호(%)가 뒤에 오는 정수를 지정한다.</li>
@@ -91,10 +103,14 @@
 			사용할 수 있는 속성값에는 lighter, normal, bold, bolder 등이 있습니다.<br>
 			또한, 100, 200, 300, ... , 900 등과 같이 숫자로 텍스트의 두께를 설정할 수도 있습니다.
 		</p>
-		<p class="mt_s">
-			<code>p { font-weight: normal | bold | bolder | lighter | 100 | 200 | 300 | 400 | 500 | 600 | 700 | 800 | 900 | inherit }</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="font-weight">
+			<textarea readonly="readonly">
+				p {
+					font-weight: normal | bold | bolder | lighter | 100 | 200 | 300 | 400 | 500 | 600 | 700 | 800 | 900 | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 보통 두께를 지정한다.</li>
 				<li><strong class="t_black">bold</strong> : 굵은 글꼴을 지정한다.</li>
@@ -117,10 +133,14 @@
 			글자 크기를 줄이는 <code>font-size:0.8em</code> 과 함께 <code>text-transform:uppercase</code>를 지정하면
 			smallcaps과 비슷한 효과를 얻을수 있다.(smallcaps를 지원하는 기본폰트가 적기때문에)
 		</p>
-		<p class="mt_s">
-			<code>p { font-variant: normal | small-caps | inherit }</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="font-variant">
+			<textarea readonly="readonly">
+				p {
+					font-variant: normal | small-caps | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 보통 글꼴을 지정한다.</li>
 				<li><strong class="t_black">small-caps</strong> : 작은 대문자 글꼴을 지정한다.</li>
@@ -137,10 +157,14 @@
 			글자의 폭을 넓게(wide) 늘이거나 좁게(narrow) 축소합니다. 즉 글자의 폭(너비)에 대해서 설정하는 속성입니다.<br>
 			font-stretch 속성은 처음에 CSS2에서 정의되었지만 브라우저 구현 부족으로 인해 CSS2.1에서 삭제되고 CSS3로 다시 정의되었습니다.
 		</p>
-		<p class="mt_s">
-			<code>p { font-stretch: normal | ultra-condensed | extra-condensed | condensed | semi-condensed | semi-expanded | expanded | extra-expanded | ultra-expanded }</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="font-stretch">
+			<textarea readonly="readonly">
+				p {
+					font-stretch: normal | ultra-condensed | extra-condensed | condensed | semi-condensed | semi-expanded | expanded | extra-expanded | ultra-expanded;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">ultra-condensed</strong> : 할수있는 한 폭을 좁힌다.</li>
 				<li><strong class="t_black">extra-condensed</strong> : condensed 보다 좁지만, ultra-condensed 보다 폭을 좁히진 않는다.</li>
@@ -186,13 +210,17 @@
 			지원 안되는 브라우저가 많아서 사용하기에는 아직 유용하지 않습니다.<br>
 			<mark>현재 파이어폭스에서만 지원하고 있습니다.</mark>
 		</p>
-		<p class="mt_s">
-			<code>p { font-size-adjust: none | number | inherit }</code><br>
-			<code>font-size: 14px;</code><br>
-			<code>font-size-adjust: 0.5;</code><br>
-			(0.5 × 14px) = 14px
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="font-size-adjust">
+			<textarea readonly="readonly">
+				p {font-size-adjust: none | number | inherit;}
+				p {
+					font-size: 14px;
+					font-size-adjust: 0.5;
+				}
+				/* (0.5 × 14px) = 14px */
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">nubmer(숫자)</strong> : 사용할 비율을 지정한다.</li>
 				<li><strong class="t_black">none</strong> : 기본값으로 글꼴 크기를 변경하지 않는다.</li>
@@ -223,6 +251,16 @@
 			line-height 속성은 텍스트의 줄 간격을 설정합니다.<br>
 			line-height 속성은 font의 축약형 방식으로 사용할 때 font-size/line-height 형식으로 같이 사용됩니다.
 		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="line-height">
+			<textarea readonly="readonly">
+				p {line-height: normal | number | length | initial | inherit;}
+
+				p {line-height: normal;}
+				p {line-height: 1.6;}
+				p {line-height: 26px;}
+				p {line-height: 140%;}
+			</textarea>
+		</div>
 	</section>
 
 	<!-- 축약형 속성 -->
@@ -232,28 +270,42 @@
 			font 속성을 축약형(Shorthand font property) 방식으로 사용합니다. 모든 font 속성을 한번에 사용할 수 있습니다.<br>
 			축약형 방식으로 사용할 때는 line-height 속성도 같이 사용 가능합니다.
 		</p>
-		<p class="mt_s">
-			<code>p{ font: font-style | font-variant | font-weight | font-stretch | font-size/line-height | font-family | inherit }</code><br>
-			<code>p { font: 12pt/14pt sans-serif; }</code><br>
-			<code>p { font: 80% sans-serif; }</code><br>
-			<code>p { font: x-large/110% "new century schoolbook", serif; }</code><br>
-			<code>p { font: bold italic large Palatino, serif; }</code><br>
-			<code>p { font: normal small-caps 120%/120% fantasy; }</code><br>
-			<code>p { font: condensed oblique 12pt "Helvetica Neue", serif; }</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="Shorthand font property">
+			<textarea readonly="readonly">
+				p { font: font-style | font-variant | font-weight | font-stretch | font-size/line-height | font-family | inherit }
+				p { font: 12pt/14pt sans-serif; }
+				p { font: 80% sans-serif; }
+				p { font: x-large/110% "new century schoolbook", serif; }
+				p { font: bold italic large Palatino, serif; }
+				p { font: normal small-caps 120%/120% fantasy; }
+				p { font: condensed oblique 12pt "Helvetica Neue", serif; }
+
+				/* 글씨 크기 12픽셀, 줄 높이 14픽셀, 글꼴 sans-serif */
+				p { font: 12px/14px sans-serif }
+
+				/* 글씨 크기 부모 또는 기본값(부모가 없을 경우)의 80%, 글꼴 sans-serif */
+				p { font: 80% sans-serif }
+
+				/* 글씨 굵기 굵게, 스타일 기울이기, 글씨 크기 크게, 글꼴 serif */
+				p { font: bold italic large serif }
+
+				/* 창의 상태표시줄과 같은 글꼴 사용 */
+				p { font: status-bar }
+			</textarea>
+		</div>
+	</section>
+
+	<section class="view_editor edit_code mt_l" data-target="css/step01/2.4.font/2.4.font.html">
+		<h3 class="ve_tit">예제</h3>
+		<div class="uk_editor indent min-height-800" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="code_wrap"><textarea></textarea></div>
+		</div>
 	</section>
 
 	<figure class="img_figure mt_xxl">
 		<img src="/ukncs/images/css/cssBeginner/uxkm_typo.svg" alt="Typography 예시">
 		<figcaption>[Typography 예시]</figcaption>
 	</figure>
-
-	<section class="view_editor edit_code mt_l" data-target="css/step01/2.4.font/2.4.font.html">
-		<h3 class="ve_tit">예제</h3>
-		<div class="uk_editor min-height-800" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
-	</section>
 
 	<aside class="browser_support mt_l" data-tit="font">
 		<ul>
