--- a/assets/02-css/02-cssBeginner/05-css_text.html
+++ b/assets/02-css/02-cssBeginner/05-css_text.html
@@ -19,10 +19,14 @@
 			text-align 속성은 텍스트의 수평 방향 정렬을 설정합니다.<br>
 			text-align 속성으로 설정된 정렬 방향은 text-direction 속성과는 상관없이 우선적으로 적용됩니다.
 		</p>
-		<p class="mt_s">
-			<code>text-align: left | right | center | justify | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="text-align">
+			<textarea readonly="readonly">
+				p {
+					text-align: left | right | center | justify | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">left</strong> : 박스의 왼쪽 정렬.</li>
 				<li><strong class="t_black">right</strong> : 박스의 오른쪽 정렬.</li>
@@ -58,9 +62,13 @@
 			같은 줄에서 인라인 요소의 크기에 따라 높낮이가 달라질 수 있고, 그 줄에 있는 line-height 설정에 따라서도 달라질 수 있습니다.<br>
 			대부분 부모 요소에 상대적으로 정렬합니다.
 		</p>
-		<p class="mt_s">
-			<code>vertical-align: baseline | length | % | sub | super | top | text-top | middle | bottom | text-bottom | initial | inherit</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="vertical-align" data-ex="align_vertical-align" data-text=": baseline | length | % | sub | super | top | text-top | middle | bottom | text-bottom | initial | inherit;">
+			<textarea readonly="readonly">
+				p {
+					vertical-align: ;
+				}
+			</textarea>
+		</div>
 		<div class="ol_lst mt_m">
 			<p class="font-16 t_black"><strong>부모 기준 값</strong> : 이 값은 요소를 부모 요소를 기준으로 세로로 정렬합니다.</p>
 			<ol class="indent mt_s">
@@ -113,10 +121,14 @@
 		<p class="mt_s">
 			letter-spacing 속성은 텍스트 내에서 글자 사이의 간격(자간)을 설정합니다.
 		</p>
-		<p class="mt_s">
-			<code>letter-spacing: normal | length | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="letter-spacing">
+			<textarea readonly="readonly">
+				p {
+					letter-spacing: normal | length | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 현재 글꼴의 일반적인 문자 간격입니다.</li>
 				<li><strong class="t_black">length</strong> : 문자 사이의 기본 공백 외에 추가 문자 간 공백 을 지정 합니다. 값은 음수 일 수 있지만 구현 별 제한이있을 수 있습니다. 사용자 에이전트는 텍스트를 정당화하기 위해 문자 간 공간을 더 늘리거나 줄일 수 없습니다.</li>
@@ -147,10 +159,14 @@
 			letter-spacing 속성과는 달리 문자 간의 간격이 아닌 단어 간의 간격을 기준으로 설정합니다.<br>
 			참조 : 일부 스크린리더기에서는 양수 또는 음수 word-spacing값이 크면 스타일링이 적용된 문장을 읽을 수 없게됩니다.
 		</p>
-		<p class="mt_s">
-			<code>word-spacing: normal | length | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="word-spacing">
+			<textarea readonly="readonly">
+				p {
+					word-spacing: normal | length | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 현재 글꼴 또는 브라우저에 의해 정의 된 일반적인 단어 간격입니다.</li>
 				<li><strong class="t_black">length</strong> : 글꼴로 정의 된 고유 한 단어 간 간격 외에 추가 간격을 지정합니다.</li>
@@ -187,9 +203,13 @@
 			모든 속성이 기본값이라는 전제하에 줄 바꿈은 대부분의 non-CJK(CJK 이외의 문자)의 경우 '공백(띄어쓰기)'에서, CJK의 경우 '음절'에서 수행됩니다.<br>
 			값은 normal(기본값), break-all, keep-all 이 있습니다. (keep-all 의 경우 IE에서는 계속 지원하였으나 webkit에서는 15년 6월부터 지원하였습니다.)
 		</p>
-		<p class="mt_s">
-			<code>word-break: normal | keep-all | break-all | break-word</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="word-break" data-ex="align_word-break" data-text=": normal | keep-all | break-all | break-word;">
+			<textarea readonly="readonly">
+				p {
+					word-break: ;
+				}
+			</textarea>
+		</div>
 		<blockquote class="uk_note mt_m" role="note">
 			<h2 class="sound_only">요약 설명</h2>
 			<p class="reference">
@@ -238,10 +258,14 @@
 			<li>예)줄바꿈을 글자 단위로 하면 word-wrap: break-word;word-break: break-all;</li>
 			<li>예)줄바꿈을 단어 단위로 하면 word-wrap: break-word;word-break: keep-all;</li>
 		</ul>
-		<p class="mt_s">
-			<code>word-spacing: normal | length | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="word-wrap">
+			<textarea readonly="readonly">
+				p {
+					word-spacing: normal | length | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 글자가 길어도 끊어지지 않고 한 줄에 계속 표시</li>
 				<li><strong class="t_black">break-word</strong> : 강제로 끊어서 줄바꿈 함</li>
@@ -270,10 +294,14 @@
 		<p class="mt_s">
 			HTML 요소 내의 여백을 설정함.
 		</p>
-		<p class="mt_s">
-			<code>white-space: normal | pre | nowrap | pre-wrap | pre-line | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="white-space">
+			<textarea readonly="readonly">
+				p {
+					white-space: normal | pre | nowrap | pre-wrap | pre-line | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 공백을 여러개 넣어도 공백 1개만 표시, 글이 길어지면 텍스트가 자동 줄바꿈 됨(wrap).</li>
 				<li><strong class="t_black">nowrap</strong> : 공백을 여러개 넣어도 1개만 표시, 텍스트가 길어도 줄바꿈 되지 않고 같은 줄에 계속 표시.</li>
@@ -306,10 +334,14 @@
 			text-indent 속성은 단락의 첫 줄에 들여쓰기할지 안 할지를 설정합니다.<br>
 			웹 페이지에서 단락은 기본적으로 들여쓰기가 설정되어 있지 않습니다.
 		</p>
-		<p class="mt_s">
-			<code>text-indent: normal | length | percentage | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="text-indent">
+			<textarea readonly="readonly">
+				p {
+					text-indent: normal | length | percentage | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 기본 공란을 재설정. 현재 글꼴 및 브라우저에 의해 정의 된 일반적인 단어 간격.</li>
 				<li><strong class="t_black">length</strong> : px, em, cm등으로 지정. (음수값 허용)</li>
@@ -341,10 +373,14 @@
 			text-decoration 속성값을 none으로 설정하여 링크(link)가 설정된 텍스트의 밑줄을 제거하는데 자주 사용합니다.<br>
 			text-decoration 속성값은 <a href="https://drafts.csswg.org/css-text-decor-3/#text-decoration-line" target="_blank" title="새창열림">CSS Text Decoration Module Level 3 해당 사양에서 'text-decoration-line'으로 새롭게 정의</a>.
 		</p>
-		<p class="mt_s">
-			<code>text-decoration: none | [ underline | overline | line-through ] | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="text-decoration">
+			<textarea readonly="readonly">
+				p {
+					text-decoration: none | [ underline | overline | line-through ] | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 기본값으로 밑줄이 없는 보통 글자.</li>
 				<li><strong class="t_black">underline</strong> : 글자 아래에 밑줄.</li>
@@ -378,10 +414,14 @@
 			또한, 단어의 첫 문자만을 대문자로 변경시킬 수도 있습니다.<br>
 			text-transform 속성은 한글에는 영향을 주지 않으며, 오직 영문자에만 적용됩니다.
 		</p>
-		<p class="mt_s">
-			<code>text-transform: none | capitalize | uppercase | lowercase | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="text-transform">
+			<textarea readonly="readonly">
+				p {
+					text-transform: none | capitalize | uppercase | lowercase | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 기본값으로, 텍스트를 html 코드에 있는 그대로 읽음.</li>
 				<li><strong class="t_black">capitalize</strong> : 각 단어의 첫 번째 문자를 대문자로 만듦. (예: Cascading Style Sheets.)</li>
@@ -415,7 +455,14 @@
 			자동 줄바꿈을 방지하려면 white-space 프로퍼티를 nowrap으로 설정합니다.<br>
 			overflow 프로퍼티에 반드시 "visible" 이외의 값이 지정되어 있어야 합니다.
 		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="text-overflow">
+			<textarea readonly="readonly">
+				p {
+					text-overflow: clip | ellipsis | initial | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">clip</strong> : 영역을 벗어난 텍스트를 표시하지 않는다. (기본값)</li>
 				<li><strong class="t_black">ellipsis</strong> : 영역을 벗어난 텍스트를 잘라내어 보이지 않게 하고 말줄임표(…)를 표시한다.</li>
@@ -449,10 +496,14 @@
 			아랍어는 한글이나 영어와는 달리 오른쪽에서 왼쪽 방향으로 텍스트를 읽고 쓰는 언어입니다.<br>
 			따라서 아랍어와 같이 텍스트를 반대 방향으로 쓰는 언어를 나타낼 때는 텍스트가 써지는 방향을 direction 속성을 사용하여 변경해 줘야 합니다.
 		</p>
-		<p class="mt_s">
-			<code>direction: ltr | rtl</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="direction">
+			<textarea readonly="readonly">
+				p {
+					direction: ltr | rtl;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">ltr</strong> : 기본값으로 왼쪽에서 오른쪽으로 이동.</li>
 				<li><strong class="t_black">rtl</strong> : 오른쪽에서 왼쪽으로 이동.</li>
@@ -482,10 +533,14 @@
 			text-shadow 속성은 텍스트에 그림자 효과를 설정합니다.<br>
 			text-shadow 속성은 쉼표(,)로 구분하여 여러 개의 텍스트 그림자를 적용 할 수 있습니다.
 		</p>
-		<p class="mt_s">
-			<code>text-shadow: offset-x offset-y blur-radius color | none | initial | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="text-shadow">
+			<textarea readonly="readonly">
+				p {
+					text-shadow: offset-x offset-y blur-radius color | none | initial | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 글림자 효과를 없앱니다.</li>
 				<li><strong class="t_black">initial</strong> : 기본값으로 설정합니다.</li>
