--- a/assets/02-css/02-cssBeginner/06-css_background.html
+++ b/assets/02-css/02-cssBeginner/06-css_background.html
@@ -21,14 +21,40 @@
 
 	<!-- background-color 속성 -->
 	<section class="txt_ex indent mt_xxl">
+		<h2 class="ml_mn"><i class="t_blue">background</i> 각 속성의 기본 값</h2>
+		<p class="mt_s">
+			background의 기본값은 다음과 같습니다.<br>
+		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="background default value">
+			<textarea readonly="readonly">
+				p {
+					background-color: transparent;
+					background-image: none;
+					background-repeat: repeat;
+					background-position: 0% 0%;
+					background-size: auto auto;
+					background-origin: padding-box;
+					background-clip: border-box;
+					background-attachment: scroll;
+				}
+			</textarea>
+		</div>
+	</section>
+
+	<!-- background-color 속성 -->
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-color</i> 속성</h2>
 		<p class="mt_s">
 			배경의 색을 정합니다. 그 색으로 border와 padding을 포함한 영역을 칠합니다. margin 영역은 칠하지 않습니다.
 		</p>
-		<p class="mt_s">
-			<code>background-color: color | transparent | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-color">
+			<textarea readonly="readonly">
+				p {
+					background-color: color | transparent | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">transparent</strong> : 기본값으로 배경색이 없습니다(투명).</li>
 				<li><strong class="t_black">color</strong> : 색을 정합니다.</li>
@@ -47,10 +73,14 @@
 		<p class="mt_s">
 			이미지를 배경으로 사용하게 하는 속성입니다.
 		</p>
-		<p class="mt_s">
-			<code>background-image: none | url | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-image">
+			<textarea readonly="readonly">
+				p {
+					background-image: none | ur('경로') | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 기본값으로 이미지를 배경으로 사용하지 않습니다.</li>
 				<li><strong class="t_black">url</strong> : 이미지의 URL을 입력합니다.</li>
@@ -75,10 +105,14 @@
 			반복 출력을 멈추고 싶은 경우, background-repeat 프로퍼티값에 no-repeat를 설정합니다.<br>
 			background-image에 복수개의 이미지를 설정할 경우, 먼저 설정된 이미지가 전면에 출력됩니다.
 		</p>
-		<p class="mt_s">
-			<code>background-repeat: repeat | repeat-x | repeat-y | no-repeat | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-repeat" data-ex="background-repeat" data-text=": repeat | repeat-x | repeat-y | no-repeat | inherit;">
+			<textarea readonly="readonly">
+				p {
+					background-repeat: ;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">repeat</strong> : 기본값으로 가로 방향, 세로 방향으로 반복합니다. 값이 없어도 기본이 repeat 됨.</li>
 				<li><strong class="t_black">repeat-x</strong> : 가로 방향으로 반복합니다.</li>
@@ -102,23 +136,35 @@
 			background-position의 기준은 항상 좌측 상단부터 시작합니다.<br>
 			background-position의 기본값은 좌측 상단기준 background-position:0% 0%; 입니다.
 		</p>
-		<p class="mt_s">
-			<code>background-position: [[percentage | length | left | center | right] [percentage | length | top | center | bottom ]] | [[left | center | right] || [top | center | bottom]] | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-position" data-ex="background-position" data-text=": [[percentage | length | left | center | right] [percentage | length | top | center | bottom ]] | [[left | center | right] || [top | center | bottom]] | inherit;">
+			<textarea readonly="readonly">
+				p {
+					background-position: ;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
-				<li><strong class="t_black">position-x position-y</strong> : 가로 위치(left, center, right, 백분율, 길이)와 세로 위치(top, center, bottom, 백분율, 길이)를 정합니다.</li>
 				<li class="line_code font14">
-					<strong>가로 위치 / 세로 위치 키워드의 조합은 다음과 같이 사용할 수 있습니다.</strong>
-					<p class="mt_sm">left top = 0 0</p>
-					<p>left center = 0 50%</p>
-					<p>left bottom = 0 100%</p>
-					<p>right top = 100% 0</p>
-					<p>right center = 100% 50%</p>
-					<p>right bottom = 100% 100%</p>
-					<p>center top = 50% 0</p>
-					<p>center center = 50% 50%</p>
-					<p>center bottom = 50% 100%</p>
+					<strong class="t_black">position-x position-y</strong> : 가로 위치(left, center, right, 백분율, 길이)와 세로 위치(top, center, bottom, 백분율, 길이)를 정합니다.
+				</li>
+				<li class="line_code font14">
+					<strong class="t_black">가로 위치 / 세로 위치 키워드의 조합은 다음과 같이 사용할 수 있습니다.</strong>
+					<div class="uk_gist_code_box mt_ms tab_line_remove" data-tit="background-position">
+						<textarea readonly="readonly">
+							div {
+								background-position: left top;       // left top      = 0 0
+								background-position: left center;    // left center   = 0 50%
+								background-position: left bottom;    // left bottom   = 0 100%
+								background-position: right top;      // right top     = 100% 0
+								background-position: right center;   // right center  = 100% 50%
+								background-position: right bottom;   // right bottom  = 100% 100%
+								background-position: center top;     // center top    = 50% 0
+								background-position: center center;  // center center = 50% 50%
+								background-position: center bottom;  // center bottom = 50% 100%
+							}
+						</textarea>
+					</div>
 				</li>
 			</ol>
 		</div>
@@ -135,10 +181,14 @@
 		<p class="mt_s">
 			배경 이미지의 스크롤 여부를 정합니다.
 		</p>
-		<p class="mt_s">
-			<code>background-attachment: scroll | fixed | local | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-attachment">
+			<textarea readonly="readonly">
+				p {
+					background-attachment: scroll | fixed | local | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">scroll</strong> : 기본값으로 배경은 요소 자체에 상대적으로 고정되며 내용과 함께 스크롤되지 않습니다.</li>
 				<li><strong class="t_black">fixed</strong> : 배경은 뷰포트를 기준으로 고정됩니다. 요소에 스크롤이 있어도 배경은 요소와 함께 움직이지 않습니다.</li>
@@ -162,10 +212,14 @@
 			배경이미지의 width, height를 모두 설정할 수 있습니다. 이때 첫번째 값은 width, 두번째 값은 height를 의미합니다.<br>
 			하나의 값만을 지정한 경우, 지정한 값은 width를 의미하게 되며 height는 auto로 지정됩니다.
 		</p>
-		<p class="mt_s">
-			<code>background-size: auto | length | cover | contain | initial | inherit</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-size">
+			<textarea readonly="readonly">
+				p {
+					background-size: auto | length | cover | contain | initial | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">auto</strong> : 기본값으로 이미지 크기를 유지합니다.</li>
 				<li>
@@ -210,10 +264,14 @@
 			background-origin으로 배경 이미지를 어느 영역부터 채워나갈지를 정합니다.<br>
 			background-origin 속성을 사용할 때 <code>background-attachment:fixed</code> 값은 무시됩니다.
 		</p>
-		<p class="mt_s">
-			<code>background-origin: border-box | padding-box | content-box | initial | inherit;</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-origin">
+			<textarea readonly="readonly">
+				p {
+					background-origin: border-box | padding-box | content-box | initial | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">padding-box</strong> : 기본값으로 안쪽 여백 영역 왼쪽 위부터 채웁니다.</li>
 				<li><strong class="t_black">border-box</strong> : 테두리 영역 왼쪽 위부터 채웁니다.</li>
@@ -243,10 +301,14 @@
 		<p class="mt_s">
 			배경 이미지나 배경색을 그 박스 중 어디에 넣을 지정하는 속성이 background-clip입니다.
 		</p>
-		<p class="mt_s">
-			<code>background-clip: border-box | padding-box | content-box | inherit;</code>
-		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="background-clip">
+			<textarea readonly="readonly">
+				p {
+					background-clip: border-box | padding-box | content-box | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">border-box</strong> : 기본값으로 테두리 영역과 그 안쪽 영역을 채웁니다.</li>
 				<li><strong class="t_black">padding-box</strong> : 안쪽 여백 영역과 그 안쪽 영역을 채웁니다.</li>
@@ -277,17 +339,13 @@
 			색상, 이미지, 크기, 반복등 한 번에 모든 배경 스타일 속성을 축약형 방식으로 설정합니다.<br>
 			축약형 방식으로 사용하여 설정할 경우 콤마(,)로 구분하여 여러형식의 배경을 정의할 수 있습니다.
 		</p>
-		<p class="mt_s">
-			background의 기본값은 다음과 같습니다.<br>
-			<code>background-color: transparent</code><br>
-			<code>background-image: none</code><br>
-			<code>background-repeat: repeat</code><br>
-			<code>background-position: 0% 0%</code><br>
-			<code>background-size: auto auto</code><br>
-			<code>background-origin: padding-box</code><br>
-			<code>background-clip: border-box</code><br>
-			<code>background-attachment: scroll</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="background Shorthand">
+			<textarea readonly="readonly">
+				p {
+					background: #ffffff url("image.png") no-repeat right top fixed;
+				}
+			</textarea>
+		</div>
 		<div class="view_editor edit_code mt_m" data-target="css/step01/2.6.background/2.6.background.html">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
