--- a/assets/02-css/02-cssBeginner/04-css_font.html
+++ b/assets/02-css/02-cssBeginner/04-css_font.html
@@ -49,7 +49,9 @@
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="font-style">
 			<textarea readonly="readonly">
-				p { font-style: normal | italic | oblique | inherit; }
+				p {
+					font-style: normal | italic | oblique | inherit;
+				}
 			</textarea>
 		</div>
 		<div class="ol_lst mt_ms">
