--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -75,14 +75,23 @@
 
 	<!-- 2.9.1. 박스 크기(width, height)를 제어하는​속성 -->
 	<section class="txt_ex indent mt_xxl">
-		<h2 class="ml_mn">2.9.1. 박스 크기(<i class="t_blue">width</i>, <i class="t_blue">height</i>)를 제어하는​속성</h2>
+		<h2 class="ml_mn">2.9.1. 박스 크기(<i class="t_blue">width</i>, <i class="t_blue">height</i>)를 제어하는 속성</h2>
 		<p class="mt_s">
 			CSS를 이용하면 HTML 요소의 크기를 마음대로 설정할 수 있습니다.<br>
 			CSS에서 크기 조절을 위해 사용할 수 있는 속성은 다음과 같습니다.
 		</p>
-		<p class="mt_s">
-			<code>height, width, max-width, min-width, max-height, min-height</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="width, height">
+			<textarea readonly="readonly">
+				div {
+					width: <length> | <percentage>;
+					height: <length> | <percentage>;
+					max-width: <length> | <percentage>;
+					max-height: <length> | <percentage>;
+					min-width: <length> | <percentage>;
+					min-height: <length> | <percentage>;
+				}
+			</textarea>
+		</div>
 
 		<!-- width 속성 -->
 		<article class="mt_l indent">
@@ -188,9 +197,13 @@
 			margin 속성값을 inherit로 설정하면, 부모(parent) 요소의 margin 속성값을 그대로 물려받습니다.<br>
 			모든 margin 속성을 이용한 스타일을 한 줄에 설정할 수 있습니다.
 		</p>
-		<p class="mt_s">
-			<code>margin : margin-width | inherit</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="margin">
+			<textarea readonly="readonly">
+				div {
+					margin: margin-width | inherit;
+				}
+			</textarea>
+		</div>
 		<figure class="img_figure mt_m">
 			<img src="/ukncs/images/css/cssBeginner/uxkm_boxmodel_margin.svg" alt="margin boxmodel">
 			<figcaption>[margin boxmodel 다이어그램]</figcaption>
@@ -242,39 +255,67 @@
 				<ol>
 					<li class="line_code font14">
 						<strong>4개의 값을 지정할 때 top, right, bottom, left 순(시계방향)으로 설정합니다.</strong>
-						<p class="mt_sm">
-							<code>ex) margin: 10px 20px 30px 40px;</code><br>
-							(위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>margin-top: 10px; margin-right: 20px; margin-bottom: 30px; margin-left: 40px;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="margin shorthand">
+							<textarea readonly="readonly">
+								div {
+									margin: 10px 20px 30px 40px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									margin-top: 10px;
+									margin-right: 20px;
+									margin-bottom: 30px;
+									margin-left: 40px;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>3개의 값을 지정할 때 top, right/left, bottom 순으로 설정합니다.</strong>
 						<p class="mt_sm">좌/우의 값이 같으면 하나로 명시하여 지정이 가능합니다.</p>
-						<p>
-							<code>ex) margin: 25px 50px 75px;</code><br>
-							(위의 예제는 아래 3줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>margin-top: 25px; margin-right: 50px; margin-left: 50px; margin-bottom: 75px</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="margin shorthand">
+							<textarea readonly="readonly">
+								div {
+									margin: 25px 50px 75px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									margin-top: 25px;
+									margin-right: 50px;
+									margin-left: 50px;
+									margin-bottom: 75px
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>2개의 값을 지정할 때 top/bottom, right/left 순으로 설정합니다.</strong>
 						<p class="mt_sm">상/하의 값이 같고, 좌/우의 값이 같으면 하나로 명시하여 지정이 가능합니다.</p>
 						<p>이 때 좌/우의 값을 auto로 지정하면 가운데로 정렬이 가능합니다.</p>
-						<p>
-							<code>ex) margin: 25px 50px;</code><br>
-							(위의 예제는 아래의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>margin-top: 25px; margin-bottom: 25px; margin-right: 50px; margin-left: 50px;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="margin shorthand">
+							<textarea readonly="readonly">
+								div {
+									margin: 25px 50px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									margin-top: 25px;
+									margin-bottom: 25px;
+									margin-right: 50px;
+									margin-left: 50px;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>1개의 값을 지정할 때 top/right/bottom/left 순으로 설정합니다.</strong>
 						<p class="mt_sm">상/우/하/좌의 값이 같으면 하나로 명시하여 지정이 가능합니다.</p>
-						<p>
-							<code>ex) margin: 25px;</code><br>
-							(위의 예제는 아래의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>margin-top: 25px; margin-right: 25px; margin-bottom: 25px; margin-left: 25px;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="margin shorthand">
+							<textarea readonly="readonly">
+								div {
+									margin: 25px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									margin-top: 25px;
+									margin-right: 25px;
+									margin-bottom: 25px;
+									margin-left: 25px;
+								}
+							</textarea>
+						</div>
 					</li>
 				</ol>
 			</div>
@@ -300,9 +341,13 @@
 			이러한 패딩 영역은 background-color 속성으로 설정하는 배경색의 영향을 함께 받습니다.<br>
 			CSS를 사용하면 패딩 영역의 크기를 방향별로 따로 설정할 수 있습니다.
 		</p>
-		<p class="mt_s">
-			<code>padding : padding-width | inherit</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="padding">
+			<textarea readonly="readonly">
+				div {
+					padding: padding-width | inherit;
+				}
+			</textarea>
+		</div>
 		<figure class="img_figure mt_m">
 			<img src="/ukncs/images/css/cssBeginner/uxkm_boxmodel_padding.svg" alt="padding boxmodel">
 			<figcaption>[padding boxmodel 다이어그램]</figcaption>
@@ -351,39 +396,67 @@
 				<ol>
 					<li class="line_code font14">
 						<strong>4개의 값을 지정할 때 top, right, bottom, left 순(시계방향)으로 설정합니다.</strong>
-						<p class="mt_sm">
-							<code>ex) padding: 10px 20px 30px 40px;</code><br>
-							(위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>padding-top: 10px; padding-right: 20px; padding-bottom: 30px; padding-left: 40px;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="padding shorthand">
+							<textarea readonly="readonly">
+								div {
+									padding: 10px 20px 30px 40px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									padding-top: 10px;
+									padding-right: 20px;
+									padding-bottom: 30px;
+									padding-left: 40px;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>3개의 값을 지정할 때 top, right/left, bottom 순으로 설정합니다.</strong>
 						<p class="mt_sm">좌/우의 값이 같으면 하나로 명시하여 지정이 가능합니다.</p>
-						<p>
-							<code>ex) padding: 25px 50px 75px;</code><br>
-							(위의 예제는 아래 3줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>padding-top: 25px; padding-right: 50px; padding-left: 50px; padding-bottom: 75px</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="padding shorthand">
+							<textarea readonly="readonly">
+								div {
+									padding: 25px 50px 75px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									padding-top: 25px;
+									padding-right: 50px;
+									padding-left: 50px;
+									padding-bottom: 75px;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>2개의 값을 지정할 때 top/bottom, right/left 순으로 설정합니다.</strong>
 						<p class="mt_sm">상/하의 값이 같고, 좌/우의 값이 같으면 하나로 명시하여 지정이 가능합니다.</p>
 						<p>이 때 좌/우의 값을 auto로 지정하면 가운데로 정렬이 가능합니다.</p>
-						<p>
-							<code>ex) padding: 25px 50px;</code><br>
-							(위의 예제는 아래의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>padding-top: 25px; padding-bottom: 25px; padding-right: 50px; padding-left: 50px;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="padding shorthand">
+							<textarea readonly="readonly">
+								div {
+									padding: 25px 50px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									padding-top: 25px;
+									padding-bottom: 25px;
+									padding-right: 50px;
+									padding-left: 50px;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>1개의 값을 지정할 때 top/right/bottom/left 순으로 설정합니다.</strong>
 						<p class="mt_sm">상/우/하/좌의 값이 같으면 하나로 명시하여 지정이 가능합니다.</p>
-						<p>
-							<code>ex) padding: 25px;</code><br>
-							(위의 예제는 아래의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>padding-top: 25px; padding-right: 25px; padding-bottom: 25px; padding-left: 25px;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="padding shorthand">
+							<textarea readonly="readonly">
+								div {
+									padding: 25px;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									padding-top: 25px;
+									padding-right: 25px;
+									padding-bottom: 25px;
+									padding-left: 25px;
+								}
+							</textarea>
+						</div>
 					</li>
 				</ol>
 			</div>
@@ -408,9 +481,6 @@
 			border 속성은 내용(content)과 패딩(padding) 영역을 둘러싸는 테두리의 스타일을 설정합니다.<br>
 			border 속성을 설정하기 위해서는 반드시 border-style 속성이 먼저 설정되어 있어야 합니다.
 		</p>
-		<p class="mt_s">
-			<code>border : border-width border-style border-color | inherit</code>
-		</p>
 		<figure class="img_figure mt_m">
 			<img src="/ukncs/images/css/cssBeginner/uxkm_boxmodel_border.svg" alt="border boxmodel">
 			<figcaption>[border boxmodel 다이어그램]</figcaption>
@@ -422,9 +492,13 @@
 			<p class="mt_s">
 				모든 border 속성을 이용한 스타일을 한 줄에 설정할 수 있습니다.
 			</p>
-			<p class="mt_s">
-				<code>ex) border: dotted 1px black</code>
-			</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="border shorthand">
+				<textarea readonly="readonly">
+					div {
+						border: border-width border-style border-color;
+					}
+				</textarea>
+			</div>
 		</article>
 
 		<!-- border-style 속성 -->
@@ -452,49 +526,65 @@
 			<p class="mt_m">속성 값의 갯수에 따라 4개 방향(top, right, bottom, left)에 대하여 지정이 가능합니다.</p>
 			<div class="ol_lst indent">
 				<ol>
-					<li class="line_code font14">
+					<li class="line_code font14 mt_s">
 						<strong>4개의 border-style 속성값을 지정할 때 top, right, bottom, left 순으로 설정합니다.</strong>
-						<p class="mt_sm">
-							<code>ex) border-style: dotted dashed solid double;</code><br>
-							(위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>border-style-top: dotted;</code><br>
-							<code>border-style-right: dashed;</code><br>
-							<code>border-style-bottom: solid;</code><br>
-							<code>border-style-left: double;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="border-style">
+							<textarea readonly="readonly">
+								div {
+									border-style: dotted dashed solid double;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									border-style-top: dotted;
+									border-style-right: dashed;
+									border-style-bottom: solid;
+									border-style-left: double;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>3개의 border-style 속성값을 지정할 때 top, right/left, bottom 순으로 설정합니다.</strong>
-						<p>
-							<code>ex) border-style: dotted dashed solid;</code><br>
-							(위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>border-style-top: dotted;</code><br>
-							<code>border-style-right: dashed;</code><br>
-							<code>border-style-left: dashed;</code><br>
-							<code>border-style-bottom: solid;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="border-style">
+							<textarea readonly="readonly">
+								div {
+									bborder-style: dotted dashed solid;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									border-style-top: dotted;
+									border-style-right: dashed;
+									border-style-left: dashed;
+									border-style-bottom: solid;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>2개의 border-style 속성값을 지정할 때 top/bottom, right/left 순으로 설정합니다.</strong>
-						<p>
-							<code>ex) border-style: dotted dashed;</code><br>
-							(위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>border-style-top: dotted;</code><br>
-							<code>border-style-bottom: dotted;</code><br>
-							<code>border-style-right: dashed;</code><br>
-							<code>border-style-left: dashed;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="border-style">
+							<textarea readonly="readonly">
+								div {
+									border-style: dotted dashed;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									border-style-top: dotted;
+									border-style-bottom: dotted;
+									border-style-right: dashed;
+									border-style-left: dashed;
+								}
+							</textarea>
+						</div>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_m">
 						<strong>1개의 border-style 속성값을 지정할 때 모든 테두리의 스타일을 같게 설정합니다.</strong>
-						<p>
-							<code>ex) border-style: dotted;</code><br>
-							(위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다.)<br>
-							<code>border-style-top: dotted;</code><br>
-							<code>border-style-right: dotted;</code><br>
-							<code>border-style-bottom: dotted;</code><br>
-							<code>border-style-left: dotted;</code>
-						</p>
+						<div class="uk_gist_code_box mt_s" data-tit="border-style">
+							<textarea readonly="readonly">
+								div {
+									border-style: dotted;
+									/* 위의 예제는 아래 4줄의 코드와 같은 의미를 가지고 있습니다. */
+									border-style-top: dotted;
+									border-style-right: dotted;
+									border-style-bottom: dotted;
+									border-style-left: dotted;
+								}
+							</textarea>
+						</div>
 					</li>
 				</ol>
 			</div>
@@ -728,6 +818,13 @@
 			각각의 모서리에 border-radius 프로퍼티를 개별적으로 지정할 수도 있고 4개의 모서리를 축약형(short-hand)으로 한번에 지정할 수도 있습니다.<br>
 			하나 혹은 두개의 반지름을 설정하여 각각의 모서리 굴곡을 설정할 수 있기 때문에 원 혹은 타원의 모양으로 정의가 가능합니다.
 		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="border-radius">
+			<textarea readonly="readonly">
+				div {
+					border-radius: border-radius-width | inherit;
+				}
+			</textarea>
+		</div>
 
 		<figure class="img_figure mt_m">
 			<img src="/ukncs/images/css/cssBeginner/uxkm_border-radius.svg" alt="border-radius">
@@ -740,11 +837,24 @@
 			<p class="mt_s">
 				상단 좌측, 상단 우측, 하단 우측, 하단 좌측의 속성을 한번에 축약하여 지정할 수 있습니다.
 			</p>
-			<p class="mt_s">
-				<code>ex) border-radius: 20px 20px 20x 20px</code>
-				또는
-				<code>border-radius: 20px</code>
-			</p>
+			<div class="uk_gist_code_box mt_s" data-tit="border-radius shorthand">
+				<textarea readonly="readonly">
+					div {
+						/* 아래의 예제는 모두 같은 결과를 나타냅니다. */
+						/* border-radius: [top-left-width top-right-width bottom-left-width bottom-right-width]; */
+						border-radius: 20px;
+
+						/* border-radius: top-left-width top-right-width bottom-left-width bottom-right-width; */
+						border-radius: 20px 20px 20x 20px;
+
+						/* border-[상|하]-[좌|우]-radius: border-width; */
+						border-top-left-radius: 20px;
+						border-top-right-radius: 20px;
+						border-bottom-left-radius: 20px;
+						border-bottom-right-radius: 20px;
+					}
+				</textarea>
+			</div>
 		</article>
 
 		<!-- border-top-left-radius 속성 -->
@@ -791,8 +901,7 @@
 			</p>
 		</article>
 
-		<article class="view_editor edit_code mt_m" data-target="css/step01/2.9.box-model/2.9.6.border-radius.html">
-			<h3 class="ve_tit sound_only">예제</h3>
+		<article class="view_editor edit_code mt_l" data-target="css/step01/2.9.box-model/2.9.6.border-radius.html">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
@@ -830,12 +939,17 @@
 				width, height 속성의 대상 영역으로 지정할 수 있어서 CSS Layout을 직관적으로 사용할 수 있게 합니다.<br>
 				box-sizing 속성은 상속되지 않습니다. 따라서 box-sizing 속성을 사용하도록 초기화하려면 아래와 같이 정의합니다.
 			</p>
-			<p class="mt_s">
-				<code>html {box-sizing: border-box;}</code><br>
-				<code>*, *::before, *::after {box-sizing: inherit;}</code><br>
-				<code>box-sizing: content-box | border-box</code>
-			</p>
-			<div class="ol_lst indent mt_s">
+			<div class="uk_gist_code_box mt_ms" data-tit="box-sizing">
+				<textarea readonly="readonly">
+					html {box-sizing: border-box;}
+					*, *::before, *::after {box-sizing: inherit;}
+
+					div {
+						box-sizing: content-box | border-box;
+					}
+				</textarea>
+			</div>
+			<div class="ol_lst mt_ms">
 				<ol>
 					<li><strong class="t_black">content-box</strong> : width, height 속성 값은 content 영역을 의미한다. (기본값)</li>
 					<li><strong class="t_black">border-box</strong> : width, height 속성 값은 content 영역, padding, border가 포함된 값을 의미한다.</li>
@@ -879,34 +993,30 @@
 		<h2 class="ml_mn css3">2.9.7. 박스 그림자(<i class="t_blue">box-shadow</i>)를 제어하는​속성</h2>
 		<p class="mt_s">
 			CSS Module Level 3<br>
-			요소에 그림자 효과를 부여하여 스타일을 지정할 수 있는데, 박스의 그림자를 box-shadow로 지정할 수 있다.
+			box-shadow 속성은 해당 HTML 요소에 간단히 그림자 효과를 적용해 줍니다.<br>
+			box-shadow 속성은 콤마(,)로 구분하여 여러형식의 box-shadow속성을 지정할 수 있습니다.<br>
+			그림자가 시작할 x축과 y축의 상대 위치를 명시하고, 그림자의 흐린 정도를 나타내는 blur 값을 명시합니다.
 		</p>
-
-		<article class="mt_l indent">
-			<h3 class="ml_mn"><i class="t_blue">box-shadow</i> 속성</h3>
-			<p class="mt_s">
-				box-shadow 속성은 해당 HTML 요소에 간단히 그림자 효과를 적용해 줍니다.<br>
-				box-shadow 속성은 콤마(,)로 구분하여 여러형식의 box-shadow속성을 지정할 수 있습니다.<br>
-				그림자가 시작할 x축과 y축의 상대 위치를 명시하고, 그림자의 흐린 정도를 나타내는 blur 값을 명시합니다.
-			</p>
-			<p class="mt_s">
-				<code>box-shadow : none | inset | position-x | position-y | blur | spread | color | inherit</code>
-			</p>
-			<div class="ol_lst indent mt_s">
-				<ol>
-					<li><strong class="t_black">none</strong> : 기본값으로 그림자 효과를 없앱니다.</li>
-					<li><strong class="t_black">inset</strong> : inset 키워드를 지정하면 그림자가 요소 안쪽에 위치하며 생략 가능.</li>
-					<li><strong class="t_black">Horizontal-offset</strong> : 양수값으로 지정하면 오른쪽으로 지정값만큼 이동, 음수값으로 지정하면 왼쪽으로 지정값만큼 이동.</li>
-					<li><strong class="t_black">Vertical-offset</strong> : 양수값으로 지정하면 아래쪽으로 지정값만큼 이동, 음수값으로 지정하면 위쪽으로 지정값만큼 이동.</li>
-					<li><strong class="t_black">blur</strong> : 그림자의 흐림정도를 지정한다. 값이 클 수록 더욱 흐려짐. 생략 가능.</li>
-					<li><strong class="t_black">spread</strong> : 그림자의 확장여부 결정. 양수이면 확대, 음수이면 축소 생략 가능.</li>
-					<li><strong class="t_black">color</strong> : 그림자의 색상(color)을 지정하며 생략 가능.</li>
-				</ol>
-			</div>
-		</article>
+		<div class="uk_gist_code_box mt_ms" data-tit="box-shadow">
+			<textarea readonly="readonly">
+				div {
+					box-shadow: none | [ inset | position-x | position-y | blur | spread | color ] | inherit;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
+			<ol>
+				<li><strong class="t_black">none</strong> : 기본값으로 그림자 효과를 없앱니다.</li>
+				<li><strong class="t_black">inset</strong> : inset 키워드를 지정하면 그림자가 요소 안쪽에 위치하며 생략 가능.</li>
+				<li><strong class="t_black">Horizontal-offset</strong> : 양수값으로 지정하면 오른쪽으로 지정값만큼 이동, 음수값으로 지정하면 왼쪽으로 지정값만큼 이동.</li>
+				<li><strong class="t_black">Vertical-offset</strong> : 양수값으로 지정하면 아래쪽으로 지정값만큼 이동, 음수값으로 지정하면 위쪽으로 지정값만큼 이동.</li>
+				<li><strong class="t_black">blur</strong> : 그림자의 흐림정도를 지정한다. 값이 클 수록 더욱 흐려짐. 생략 가능.</li>
+				<li><strong class="t_black">spread</strong> : 그림자의 확장여부 결정. 양수이면 확대, 음수이면 축소 생략 가능.</li>
+				<li><strong class="t_black">color</strong> : 그림자의 색상(color)을 지정하며 생략 가능.</li>
+			</ol>
+		</div>
 
 		<article class="view_editor edit_code mt_m" data-target="css/step01/2.9.box-model/2.9.7.box-shadow.html">
-			<h3 class="ve_tit sound_only">예제</h3>
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
