--- a/assets/02-css/02-cssBeginner/10-css_effects.html
+++ b/assets/02-css/02-cssBeginner/10-css_effects.html
@@ -25,7 +25,14 @@
 			overflow 속성은 지정된 높이의 블록 요소에 대해서만 작동합니다.<br>
 			overflow 속성은 overflow-x 속성과 overflow-y 속성으로 구분지어 사용할 수 있습니다.
 		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="overflow">
+			<textarea readonly="readonly">
+				div {
+					overflow: visible | hidden | scroll | auto;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">visible</strong> : 기본값으로 내용(Content)이 잘리지 않으며, 컨텐트 박스(Content box) 영역을 벗어나서 렌더링 될 수도 있습니다.</li>
 				<li><strong class="t_black">hidden</strong> : 필요하다면 컨텐트 박스에 맞게 내용이 잘립니다. 스크롤 바가 제공되진 않습니다.</li>
@@ -34,7 +41,6 @@
 			</ol>
 		</div>
 		<div class="view_editor edit_code mt_m" data-target="css/step01/2.10.visual-effects/2.10.overflow.html">
-			<h2 class="ve_tit sound_only">예제</h2>
 			<div class="uk_editor min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
@@ -58,7 +64,14 @@
 			문서의 레이아웃을 변경하지 않고 요소를 보이거나 숨깁니다. visibility로 <code>&lt;table&gt;</code>의 행이나 열을 숨길 수도 있습니다.<br>
 			문서를 숨기고, 레이아웃에서도 제외하려면, visibility를 사용하는 대신 display 속성을 none으로 설정합니다.
 		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="visibility">
+			<textarea readonly="readonly">
+				div {
+					visibility: visible | hidden | collapse;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">visible</strong> : 기본값으로 해당 요소를 보이게 한다.</li>
 				<li><strong class="t_black">hidden</strong> : 해당 요소를 보이지 않게 한다. display: none;은 해당 요소의 공간까지 사라지게 하지만 visibility: hidden;은 해당 요소의 공간은 사라지지 않고 남아있게 된다.</li>
@@ -77,7 +90,6 @@
 			</ol>
 		</div>
 		<div class="view_editor edit_code mt_m" data-target="css/step01/2.10.visual-effects/2.10.visibility.html">
-			<h2 class="ve_tit sound_only">예제</h2>
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
