--- a/assets/02-css/02-cssBeginner/12-css_interface.html
+++ b/assets/02-css/02-cssBeginner/12-css_interface.html
@@ -23,21 +23,38 @@
 			outline 속성을 설정하기 위해서는 반드시 outline-style 속성이 먼저 설정되어 있어야 합니다.<br>
 			익스플로러 8과 그 이전 버전에서는 HTML 문서에 <code>&lt;!DOCTYPE html&gt;</code>이 선언되어 있어야 outline 속성이 제대로 표현됩니다.
 		</p>
-		<div class="ol_lst indent mt_s">
+		<div class="uk_gist_code_box mt_ms" data-tit="outline">
+			<textarea readonly="readonly">
+				div {
+					outline: outline-width outline-style outline-color;
+				}
+			</textarea>
+		</div>
+		<div class="ol_lst mt_ms">
 			<ol>
 				<li><strong class="t_black">outline</strong> : 아웃라인 축약 표현(outline shorthand)으로 모든 outline 속성을 이용한 스타일을 한 줄에 설정할 수 있습니다.</li>
-				<li><strong class="t_black">outline-style</strong> : 아웃라인(outline)를 다양한 모양으로 설정합니다.</li>
 				<li><strong class="t_black">outline-width</strong> : 아웃라인(outline)의 너비를 설정합니다.</li>
+				<li><strong class="t_black">outline-style</strong> : 아웃라인(outline)를 다양한 모양으로 설정합니다.</li>
 				<li><strong class="t_black">outline-color</strong> : 아웃라인(outline)의 색상을 설정합니다.</li>
 				<li><strong class="t_black">outline-offset</strong> : 테두리(border)와 아웃라인(outline) 사이의 여백을 설정합니다. IE는 지원 안합니다.</li>
 			</ol>
 		</div>
 
+		<!-- outline-width 속성 -->
+		<article class="indent mt_l">
+			<h3 class="ml_mn"><i class="t_blue">outline-width</i> 속성</h3>
+			<p class="mt_s">
+				<code>outline-width</code> 속성은 아웃라인(outline)의 두께를 설정합니다.<br>
+				px, em, cm 등과 같은 CSS 크기 단위를 이용하여 두께를 직접 설정할 수 있습니다.<br>
+				또한, 미리 설정해 놓은 예약어인 thin, medium, thick을 사용하여 설정할 수도 있습니다.
+			</p>
+		</article>
+
 		<!-- outline-style 속성 -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn"><i class="t_blue">outline-style</i> 속성</h3>
 			<p class="mt_s">
-				outline-style 속성을 이용하면 아웃라인(outline)을 다양한 모양으로 설정할 수 있습니다.
+				<code>outline-style</code> 속성을 이용하면 아웃라인(outline)을 다양한 모양으로 설정할 수 있습니다.
 			</p>
 			<div class="ol_lst indent mt_s">
 				<ol>
@@ -55,22 +72,12 @@
 			</div>
 		</article>
 
-		<!-- outline-width 속성 -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn"><i class="t_blue">outline-width</i> 속성</h3>
-			<p class="mt_s">
-				outline-width 속성은 아웃라인(outline)의 두께를 설정합니다.<br>
-				px, em, cm 등과 같은 CSS 크기 단위를 이용하여 두께를 직접 설정할 수 있습니다.<br>
-				또한, 미리 설정해 놓은 예약어인 thin, medium, thick을 사용하여 설정할 수도 있습니다.
-			</p>
-		</article>
-
 		<!-- outline-color 속성 -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn"><i class="t_blue">outline-color</i> 속성</h3>
 			<p class="mt_s">
-				outline-color 속성은 아웃라인(outline)의 색상을 설정합니다.
-				기본적인 color 속성값들뿐만 아니라 색반전을 나타내는 invert 속성값을 사용할 수 있습니다.
+				<code>outline-color</code> 속성은 아웃라인(outline)의 색상을 설정합니다.<br />
+				기본적인 color 속성값들뿐만 아니라 색반전을 나타내는 invert 속성값을 사용할 수 있습니다.<br />
 				또한, invert 속성값은 배경색과 상관없이 아웃라인을 보여주기 위한 색반전을 설정합니다.
 			</p>
 		</article>
@@ -101,20 +108,41 @@
 			요소 위에 마우스 커서가 올라갔을 때 보여줄 모양을 지정합니다.<br>
 			속성 값에 따라 브라우저 지원이 다릅니다.
 		</p>
+		<!--
 		<p class="mt_s">
 			<code>
 				cursor:[ [ &lt;url&gt; [ &lt;x&gt; &lt;y&gt; ]? , ]* [ auto | default | none | context-menu | help | pointer | progress | wait | cell | crosshair | text | vertical-text | alias | copy | move | no-drop | not-allowed | e-resize | n-resize | ne-resize | nw-resize | s-resize | se-resize | sw-resize | w-resize | ew-resize | ns-resize | nesw-resize | nwse-resize | col-resize | row-resize | all-scroll | zoom-in | zoom-out | grab | grabbing ] ]
 			</code>
 		</p>
+		-->
 		<p class="mt_m">
 			<strong class="font-16 t_black">대표적인 마우스 커서 값은 다음과 같습니다.</strong>
-			<b class="font-16 t_blue">(아래 예제에 마우스를 올려보세요.)</b>
+			<!--<b class="font-16 t_blue">(아래 예제에 마우스를 올려보세요.)</b>-->
 		</p>
 
 		<div class="ol_lst indent mt_s">
+			<div class="uk_gist_code_box mt_ms" data-tit="cursor">
+				<textarea readonly="readonly">
+					div {
+						/* 1. 일반 */
+						cursor: auto | default | none;
+						/* 2. 링크와 상태 */
+						cursor: context-menu | help | pointer | progress | wait;
+						/* 3. 선택 */
+						cursor: cell | crosshair | text | vertical-text;
+						/* 4. 드래그 앤 드롭 */
+						cursor: alias | copy | move | no-drop(not-allowed) | grab | grabbing;
+						/* 5. 크기 조절과 스크롤 */
+						cursor: all-scroll | col-resize | row-resize | n-resize | e-resize | s-resize | w-resize | ne-resize | nw-resize | se-resize | sw-resize | ew-resize | ns-resize | nesw-resize | nwse-resize;
+						/* 6. 확대와 축소 */
+						cursor: zoom-in | zoom-out;
+					}
+				</textarea>
+			</div>
+			<p class="font-16 t_blue mt_m"><strong>아래 예제에 마우스를 올려보세요.</strong></p>
 			<ol>
 				<!-- 일반 -->
-				<li class="line_code font14">
+				<li class="line_code font14 mt_ms">
 					<strong>일반</strong>
 					<div class="line_code mt_sm">
 						<p>auto : 사용자 에이전트가 현재 맥락에 맞춰 표시할 커서를 결정. 예를 들어 글씨 위에서는 text를 사용합니다.</p>
@@ -165,8 +193,8 @@
 					<strong>크기 조절과 스크롤</strong>
 					<div class="line_code mt_sm">
 						<p style="cursor:all-scroll;">all-scroll : <img src="/ukncs/images/css/cursor/all-scroll.gif" alt="all-scroll"> 모든 방향으로 이동 가능. (패닝) Windows에서 all-scroll은 move와 같습니다</p>
-						<p style="cursor:col-resize;">col-resize	col-resize.gif<img src="/ukncs/images/css/cursor/col-resize.gif" alt="col-resize"> 항목/행의 크기를 좌우로 조절할 수 있음. 종종 좌우 화살표의 가운데를 세로로 분리한 모양을 사용합니다.</p>
-						<p style="cursor:row-resize;">row-resize	row-resize.gif<img src="/ukncs/images/css/cursor/row-resize.gif" alt="row-resize"> 항목/열의 크기를 상하로 조절할 수 있음. 종종 상하 화살표의 가운데를 가로로 분리한 모양을 사용합니다.</p>
+						<p style="cursor:col-resize;">col-resize<img src="/ukncs/images/css/cursor/col-resize.gif" alt="col-resize"> 항목/행의 크기를 좌우로 조절할 수 있음. 종종 좌우 화살표의 가운데를 세로로 분리한 모양을 사용합니다.</p>
+						<p style="cursor:row-resize;">row-resize<img src="/ukncs/images/css/cursor/row-resize.gif" alt="row-resize"> 항목/열의 크기를 상하로 조절할 수 있음. 종종 상하 화살표의 가운데를 가로로 분리한 모양을 사용합니다.</p>
 						<p>동, 서, 남, 북 resize : 움직일 수 있는 모서리. 예를 들어, se-resize 커서는 움직임이 사각형의 동남쪽에서 시작할 때 사용합니다.<br>
 							어떤 환경에선 동일한 방향의 양방향 화살표를 대신 보여줍니다. 즉 n-resize와 s-resize는 ns-resize와 같습니다.<br>
 							현재 모든 브라우저에서 양방향 크기 조절 커서와 동일하게 보임.
