--- a/assets/02-css/03-cssMiddleclass/02-css_content.html
+++ b/assets/02-css/03-cssMiddleclass/02-css_content.html
@@ -53,9 +53,21 @@
 			이 의사 요소는 텍스트의 첫 라인만을 선택합니다.<br>
 			단, 블록(block) 타입의 요소에만 사용할 수 있습니다.<br>
 			이 의사 요소를 통해 사용할 수 있는 속성은 다음과 같습니다.<br>
-			<code>clear, color, font, font-family, font-size, font-style, font-variant, font-weight, line-height, background, vertical-align, word-spacing, text-decoration, text-transform</code>
 		</p>
-
+		<div class="uk_gist_code_box mt_ms" data-tit="::first-line (:first-line)">
+			<textarea readonly="readonly">
+				p::first-line {
+					/*
+					[사용할 수 있는 속성]
+					clear,
+					line-height, vertical-align,
+					font, font-family, font-size, font-style, font-variant, font-weight, color,
+					word-spacing, text-decoration, text-transform,
+					background
+					*/
+				}
+			</textarea>
+		</div>
 		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li class="line_code font14">
