--- a/assets/02-css/03-cssMiddleclass/01-css_selectors_level3.html
+++ b/assets/02-css/03-cssMiddleclass/01-css_selectors_level3.html
@@ -14,12 +14,19 @@
 			<h3 class="ml_mn t_blue css3">3.1.1.1. 일반 형제 셀렉터(General Sibling Combinator) <i class="fab fa-css3-alt"></i></h3>
 			<p class="mt_s">
 				CSS Level 3 선택자<br>
-				형제(동위) 셀렉터는 형제 관계(동위 관계)에서 뒤에 위치하는 요소를 선택할 때 사용합니다.
+				형제(동위) 셀렉터는 형제 관계(동위 관계)에서 뒤에 위치하는 요소를 선택할 때 사용합니다.<br>
+				셀렉터A의 형제 요소 중 셀렉터A 뒤에 위치하는 셀렉터B 요소를 모두 선택합니다.
 			</p>
-
 			<p class="mt_s t_black"><strong>Element ~ Element(셀렉터A ~ 셀렉터B)</strong></p>
-			<p class="indent">셀렉터A의 형제 요소 중 셀렉터A 뒤에 위치하는 셀렉터B 요소를 모두 선택합니다.</p>
-			<div class="adjacent_sibling indent mt_s">
+			<div class="uk_gist_code_box mt_ms" data-tit="General Sibling Combinator">
+				<textarea readonly="readonly">
+					p ~ ul {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
+
+			<div class="adjacent_sibling mt_ms">
 				<div class="inner_wrap">
 					<ul>
 						<li>body</li>
@@ -40,7 +47,7 @@
 				<p class="txt mt_ms">[일반 형제 셀렉터]</p>
 			</div>
 
-			<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.1.1.general-sibling-combinator.html">
+			<div class="view_editor edit_code mt_ms" data-target="css/step02/3.1.selector/3.1.1.1.general-sibling-combinator.html">
 				<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
@@ -62,11 +69,23 @@
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn css3">3.1.2. 속성 선택자(Attribute Selector)</h2>
 		<p class="mt_s">
-			CSS Level 3 선택자
-			CSS 속성 선택기는 주어진 속성의 존재 또는 값에 따라 요소를 일치시킵니다.
-			대,소문자 정확하게 구분하여 사용합니다.
+			CSS Level 3 선택자<br>
+			CSS 속성 선택기는 주어진 속성의 존재 또는 값에 따라 요소를 일치시킵니다.<br>
+			대, 소문자 정확하게 구분하여 사용합니다.
 		</p>
-		<p class="mt_s"><code>[attribute^='value'] / [attribute$='value'] / [attribute*='value']</code></p>
+		<div class="uk_gist_code_box mt_ms" data-tit="Attribute Selector">
+			<textarea readonly="readonly">
+				[attribute^='value'] {
+					/* style 작성 */
+				}
+				[attribute$='value'] {
+					/* style 작성 */
+				}
+				[attribute*='value'] {
+					/* style 작성 */
+				}
+			</textarea>
+		</div>
 
 		<!-- [attribute^="value"] -->
 		<article class="indent mt_l">
@@ -75,7 +94,14 @@
 				지정된 속성 값으로 시작하는 요소를 선택합니다.<br>
 				속성의 값이 value로 시작하는 요소를 선택합니다. 단어 기준이 아니라 문자열 기준 입니다.
 			</p>
-			<p class="mt_s"><code>ex) h1[title^="abc"] /*title 속성의 값이 abc로 시작하는 h1 요소를 선택. "abc xyz", "abc-xyz" 모두 선택된다.*/</code></p>
+			<div class="uk_gist_code_box mt_ms" data-tit="[attribute^=&quot;value&quot;]">
+				<textarea readonly="readonly">
+					/* title 속성의 값이 abc로 시작하는 h1 요소를 선택. "abc xyz", "abc-xyz" 모두 선택됩니다. */
+					h1[title^="abc"] {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
 		</article>
 
 		<!-- [attribute$='value"] -->
@@ -85,7 +111,14 @@
 				지정된 속성 값으로 끝나는 요소를 선택합니다.<br>
 				속성의 값이 value로 끝나는 요소를 선택합니다. 단어 기준이 아니라 문자열 기준 입니다.
 			</p>
-			<p class="mt_s"><code>ex) h1[title$="abc"] /*title 속성의 값이 abc로 끝나는 h1 요소를 선택. "xyz abc", "xyz-abc" 모두 선택된다.*/</code></p>
+			<div class="uk_gist_code_box mt_ms" data-tit="[attribute$=&apos;value&quot;]">
+				<textarea readonly="readonly">
+					/* title 속성의 값이 abc로 끝나는 h1 요소를 선택. "xyz abc", "xyz-abc" 모두 선택됩니다. */
+					h1[title$="abc"] {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
 		</article>
 
 		<!-- [attribute*='value"] -->
@@ -95,7 +128,14 @@
 				지정된 속성 값을 포함하는 요소를 선택합니다.<br>
 				속성의 값이 value를 포함한 요소를 선택합니다. 포함 여부는 문자열 기준으로 판단합니다.
 			</p>
-			<p class="mt_s"><code>ex) h1[title*="abc"] /*title 속성의 값이 abc를 포함한 h1 요소를 선택. "abc xyz","abcxyz","abc-xyz" 모두 선택된다.*/</code></p>
+			<div class="uk_gist_code_box mt_ms" data-tit="[attribute*=&apos;value&quot;]">
+				<textarea readonly="readonly">
+					/* title 속성의 값이 abc를 포함한 h1 요소를 선택. "abc xyz","abcxyz","abc-xyz" 모두 선택됩니다. */
+					h1[title*="abc"] {
+						/* style 작성 */
+					}
+				</textarea>
+			</div>
 		</article>
 
 		<div class="view_editor edit_code mt_l" data-target="css/step02/3.1.selector/3.1.2.attribute-selector.html">
@@ -125,12 +165,26 @@
 			<h3 class="ml_mn t_blue css3">3.1.3.1. 구조적 의사(가상)클래스(Structural pseudo-class) <i class="fab fa-css3-alt"></i></h3>
 			<blockquote class="uk_note mt_m" role="note">
 				<h4 class="sound_only">요약 설명</h4>
-				<p>구조 의사 클래스를 사용하면 HTML 요소의 계층 구조에서 특정 위치에 있는 요소를 선택할 수 있습니다.</p>
+				<p>
+					CSS Level 3 선택자<br>
+					구조 의사 클래스를 사용하면 HTML 요소의 계층 구조에서 특정 위치에 있는 요소를 선택할 수 있습니다.
+				</p>
 			</blockquote>
-			<p class="mt_s">
-				CSS Level 3 선택자<br>
-			</p>
-			<p class="mt_s"><code>:root / :empty / :last-child / :only-child / :first-of-type / :last-of-type / :only-of-type / :nth-child(n) / :nth-last-child(n) / :nth-of-type(n) / :nth-last-of-type(n)</code></p>
+			<div class="uk_gist_code_box mt_ms" data-tit="Structural pseudo-class">
+				<textarea readonly="readonly">
+					:root {}
+					li:empty {}
+					li:last-child {}
+					li:only-child {}
+					li:first-of-type {}
+					li:last-of-type {}
+					li:only-of-type {}
+					li:nth-child(n) {}
+					li:nth-last-child(n) {}
+					li:nth-of-type(n) {}
+					li:nth-last-of-type(n) {}
+				</textarea>
+			</div>
 
 			<!-- :root -->
 			<div class="indent mt_ml">
@@ -138,6 +192,13 @@
 				<p class="mt_s">
 					문서의 root 요소(최상위 요소 html)를 선택합니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:root]">
+					<textarea readonly="readonly">
+						:root {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-root.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -152,6 +213,13 @@
 					아무런 자식(child) 요소도 가지지 않는 요소를 모두 선택함.<br>
 					엘리먼트 내에 스페이스 빈 공간이라도 있다면 그 요소는 비어있는 요소가 아니기 때문에 선택할 수 없습니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:empty]">
+					<textarea readonly="readonly">
+						li:empty {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-empty.html">
 					<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -165,6 +233,13 @@
 				<p class="mt_s">
 					모든 자식(child) 요소 중에서 요소 유형(타입)에 상관없이 마지막에 위치하는 자식(child) 요소를 모두 선택함.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:last-child]">
+					<textarea readonly="readonly">
+						li:last-child {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-last-child.html">
 					<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -180,6 +255,13 @@
 					컨테이너 안에서 특정 유형(타입)의 요소에서 첫 번째를 찾습니다.<br>
 					예를 들어서 <code>p:first-of-type</code>은 부모의 첫 번째 자식이든 아니든 상관하지 않고 첫 번째 <code>&lt;p&gt;</code> 요소를 선택하게 됩니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:first-of-type]">
+					<textarea readonly="readonly">
+						li:first-of-type {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-first-of-type.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -194,6 +276,13 @@
 					모든 자식(child) 요소 중에서 마지막으로 등장하는 특정 요소를 모두 선택합니다.<br>
 					<code>:first-of-type</code>과 정확하게 동일하지만 컨테이너의 특정 유형(타입)의 요소에서 마지막을 찾습니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:last-of-type]">
+					<textarea readonly="readonly">
+						li:last-of-type {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-last-of-type.html">
 					<div class="uk_editor min-height-450" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -208,6 +297,13 @@
 					자식(child) 요소를 단 하나만 가지는 모든 요소의 자식(child) 요소를 선택합니다.<br>
 					만약 컨테이너에서 자식이 하나라면 그 요소를 선택하게 됩니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:only-child]">
+					<textarea readonly="readonly">
+						li:only-child {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-only-child.html">
 					<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -220,10 +316,17 @@
 				<h4 class="ml_mn">:only-of-type</h4>
 				<p class="mt_s">
 					자식(child) 요소 중 동일한 유형의 형제가 없는 요소를 선택합니다.<br>
-					<code>:ony-child</code>와 마찬가지입니다. 단지 해당 요소가 컨테이너에서 그 유형(타입)에서 유일한 하나라면 그 요소를 선택합니다.<br>
+					<code>:only-child</code>와 마찬가지입니다. 단지 해당 요소가 컨테이너에서 그 유형(타입)에서 유일한 하나라면 그 요소를 선택합니다.<br>
 					예를 들어서 <code>&lt;div&gt;</code>가 하나의 <code>&lt;h1&gt;</code>과 하나의 <code>&lt;p&gt;</code>를 포함하고 있다면
 					이들 각각은 해당 유형(타입)이 유일한 요소일 것입니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:only-of-type]">
+					<textarea readonly="readonly">
+						li:only-of-type {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-only-of-type.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -243,6 +346,13 @@
 					<code>:nth-child</code> 사용은 해당 요소를 필요에 따라 적절하게 사용하여 활용도가 높은 의사(가상) 클래스입니다.<br>
 					다만 복잡한 페이지 선택의 경우 HTML에서 혼란스러운 <code>:nth-child</code> 표현식 보다 클래스를 직접 사용 하는 것이 좋습니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:nth-child(n)]">
+					<textarea readonly="readonly">
+						li:nth-child(n) {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="ol_lst mt_m">
 					<strong class="font-16 t_skyblue">n번째 유형별 설명</strong>
 					<ol class="indent">
@@ -313,7 +423,7 @@
 
 				<div class="mt_m nth_chart">
 					<strong class="font-16 t_skyblue">nth-child() 계산법 한눈에 보기</strong>
-					<div class="table_basic first_cell_th mt_s t_center">
+					<div class="table_basic indent first_cell_th mt_s t_center">
 						<ul class="lst_hd">
 							<li class="cell">n</li>
 							<li class="cell">2n+1</li>
@@ -380,7 +490,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="table_basic first_cell_th mt_s t_center">
+					<div class="table_basic indent first_cell_th mt_s t_center">
 						<ul class="lst_hd">
 							<li class="cell">n</li>
 							<li class="cell">2n+1</li>
@@ -444,14 +554,14 @@
 
 				<div class="view_editor edit_code mt_m" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-nth-child.html">
 					<h5 class="ve_tit font-16">nth-child 예제1</h5>
-					<div class="uk_editor min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor indent min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
 
 				<div class="view_editor edit_code mt_m" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-nth-child2.html">
 					<h5 class="ve_tit font-16">nth-child 예제2</h5>
-					<div class="uk_editor min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor indent min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -463,6 +573,13 @@
 				<p class="mt_s">
 					모든 자식(child) 요소 중에서 뒤에서부터 n번째에 위치하는 자식(child) 요소를 모두 선택합니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:nth-last-child(n)]">
+					<textarea readonly="readonly">
+						li:nth-last-child(n) {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-nth-last-child.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -478,6 +595,13 @@
 					<code>:nth-child</code>와 마찬가지로 모든 선택자 속성을 사용할 수 있습니다.<br>
 					<code>:nth-child</code>와 차이점은 모든 속성이 아닌 선택한 요소 중에서 선택 합니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:nth-of-type(n)]">
+					<textarea readonly="readonly">
+						li:nth-of-type(n) {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-nth-of-type.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -491,6 +615,13 @@
 				<p class="mt_s">
 					모든 자식(child) 요소 중에서 뒤에서부터 n번째로 등장하는 특정 요소를 모두 선택합니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="Structural pseudo-class [:nth-last-of-type(n)]">
+					<textarea readonly="readonly">
+						li:nth-last-of-type(n) {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-nth-last-of-type.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
@@ -524,8 +655,17 @@
 				<p class="mt_s">
 					선택 옵션 의사 클래스(Selected-option pseudo-class)<br>
 					<code>:checked</code>는 <code>&lt;input&gt;</code> 요소 중에서 체크된(checked) 상태의 <code>&lt;input&gt;</code> 요소를 선택합니다.<br>
-					<code>:checked{/* style 작성 */}</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="UI element states pseudo-classes [:checked]">
+					<textarea readonly="readonly">
+						input[type="checkbox"]:checked {
+							/* style 작성 */
+						}
+						input[type="radio"]:checked {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 			</div>
 
 			<!-- :enabled -->
@@ -537,6 +677,13 @@
 					기본 <code>:enabled</code> 상태로 표현됩니다.<br>
 					<code>:enabled{/* style 작성 */}</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="UI element states pseudo-classes [:enabled]">
+					<textarea readonly="readonly">
+						input:enabled {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 			</div>
 
 			<!-- :disabled -->
@@ -547,6 +694,13 @@
 					<code>:disabled</code>는 <code>&lt;input&gt;</code> 요소 중에서 사용할 수 없는 <code>&lt;input&gt;</code> 요소를 선택합니다.<br>
 					<code>:disabled{/* style 작성 */}</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="UI element states pseudo-classes [:disabled]">
+					<textarea readonly="readonly">
+						input:disabled {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 			</div>
 
 			<div class="view_editor edit_code mt_ml" data-target="css/step02/3.1.selector/3.1.3.2.ui-states-pseudo-class.html">
@@ -572,11 +726,10 @@
 			<h3 class="ml_mn t_blue css3">3.1.3.3. 대상 의사 클래스(Target pseudo-class) <i class="fab fa-css3-alt"></i></h3>
 			<p class="mt_s">
 				CSS Level 3 선택자<br>
-				<code>:target{/* style 작성 */}</code>
 			</p>
 
 			<!-- :target -->
-			<div class="indent mt_ml">
+			<div class="indent mt_m">
 				<h4 class="ml_mn">:target</h4>
 				<p class="mt_s">
 					참조 URL의 대상인 E 요소를 선택합니다.<br>
@@ -584,10 +737,17 @@
 					문서의 URI에서 부위 식별자(fragment identifier)의 목표가 되는 요소를 선택합니다.<br>
 					예를 들어서 주소창에서 #demo가 URI의 끝부분에 나오게 된다면 <code>:target</code>을 사용하여 #demo라는 id를 가진 HTML상의 요소를 선택할 수 있습니다.
 				</p>
+				<div class="uk_gist_code_box mt_ms" data-tit="Target pseudo-class [:target]">
+					<textarea readonly="readonly">
+						:target {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 			</div>
 
-			<div class="view_editor edit_code mt_ml" data-target="css/step02/3.1.selector/3.1.3.3.target-pseudo-class.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="view_editor edit_code mt_m" data-target="css/step02/3.1.selector/3.1.3.3.target-pseudo-class.html">
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
@@ -614,16 +774,23 @@
 			</p>
 
 			<!-- :not(selector) -->
-			<div class="indent mt_ml">
+			<div class="indent mt_m">
 				<h4 class="ml_mn">:not(selector)</h4>
 				<p class="mt_s">
 					<code>:not</code> 선택자는 모든 선택자와 함께 사용할 수 있으며, 해당 선택자를 반대로 적용하여 선택합니다.<br>
 					부정 의사 클래스라고 하며, selector를 제외한 모든 제외한 모든 요소들을 선택할 때 사용할 수 있습니다.<br>
 					<code>:not(제외할 셀렉터 또는 속성){/* style 작성 */}</code>
 				</p>
+				<div class="uk_gist_code_box mt_ms" data-tit="Negation pseudo-class [:not]">
+					<textarea readonly="readonly">
+						:not(selector) {
+							/* style 작성 */
+						}
+					</textarea>
+				</div>
 			</div>
 
-			<div class="view_editor edit_code mt_ml" data-target="css/step02/3.1.selector/3.1.3.4.negation-pseudo-class.html">
+			<div class="view_editor edit_code indent mt_m" data-target="css/step02/3.1.selector/3.1.3.4.negation-pseudo-class.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
